--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,1 +1,15 @@
+environment:
+  nodejs_version: "6"
 
+install:
+  - ps: Install-Product node $env:nodejs_version
+  - npm install
+  - npm install nativefier -g
+
+test_script:
+  - node --version
+  - npm --version
+
+build:
+  - nativefier --name "Some Awesome App" "http://medium.com"
+  - ls -lisa
